--- a/less/fancybox.less
+++ b/less/fancybox.less
@@ -22,7 +22,7 @@
 }
 
 .fancybox-opened {
-	z-index: 8030;
+	z-index: 9999;
 }
 
 .fancybox-opened .fancybox-skin {
